# mecanum_drive_controller

./: CMakeLists.txt  README.md  mecanum_drive_controller_plugins.xml  package.xml
control/: control.yaml
include/mecanum_drive_controller/: mecanum_drive_controller.h  mecanum_drive_kinematic.h
launch/: t.launch
src/: mecanum_drive_controller.cpp  mecanum_drive_kinematic.cpp  temp_test_node.cpp
